--- a/public/stylesheets/hacks.ie.css
+++ b/public/stylesheets/hacks.ie.css
@@ -3,7 +3,7 @@
 hacks for all versions of ie
 
 */
-
+#navigation{ margin-top:-20px; }
 #navigation li{
   padding:5px 5px 5px;
   margin:0 10px 5px 0;
